--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,136 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+.slide_icon {
+  font-size: 25px;
+  color: green;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+.my-favorite-text-color {
+  color: green;
+
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
+p {
+  margin: 10px;
+  text-align: justify;
+  font-family: "Segoe UI";
+}
 
-  color: #8c8c8c;
 
+div {
+  font-family: "Segoe UI";
+  margin: 5px;
+  display: flex;
+  align-items: center;
+}
+
+.title-revuelto {
+  color: orangered;
+  font-family: "Segoe UI";
   margin: 0;
 }
 
-#container a {
-  text-decoration: none;
+.icon-revuelto {
+  color: orangered;
+  float: left;
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
 }
+
+.icon-urus {
+  color: rgb(14, 12, 11);
+  float: left;
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+}
+
+.title-urus {
+  color: rgb(14, 12, 11);
+  font-family: "Segoe UI";
+  margin: 0;
+}
+
+.icon-urus-p {
+  color: rgb(190, 176, 22);
+  float: left;
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+}
+.title-urus-p {
+  color: rgb(190, 176, 22);
+  font-family: "Segoe UI";
+  margin: 0;
+}
+
+.icon-huracan {
+  color: rgb(74, 70, 26);
+  float: left;
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+}
+.title-huracan {
+  color: rgb(74, 70, 26);
+  font-family: "Segoe UI";
+  margin: 0;
+}
+
+.icon-huracan-sto {
+  color: rgb(241, 96, 0);
+  float: left;
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+}
+.title-huracan-sto {
+  color: rgb(7, 206, 228);
+  font-family: "Segoe UI";
+  margin: 0;
+}
+
+section{
+
+  width: 100%;
+}
+.section-revuelto {
+  border: 5px solid orangered; 
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.section-urus {
+  border: 5px solid rgb(14, 12, 11); 
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.section-urus-p {
+  border: 5px solid rgb(190, 176, 22); 
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.section-huracan-sterrato {
+  border: 5px solid rgb(74, 70, 26); 
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.section-huracan-sto {
+  border-top: 5px solid rgb(7, 206, 228);
+  border-bottom:5px solid rgb(7, 206, 228);
+  border-left: 5px solid orangered;
+  border-right: 5px solid orangered;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+
+
+
+
+
+
+
+
