--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -3,130 +3,7 @@
 </ion-header>
 
 <ion-content>
-  <swiper-container [initialSlide]="0" [slidesPerView]="1" [speed]="400">
-    <swiper-slide>
-      <div>
-        <ion-icon class="icon-revuelto" name="car-sport"></ion-icon>
-        <h1 class="title-revuelto">Lamborghini Revuelto</h1>
-      </div>
-      <img
-        src="https://www.lamborghini.com/sites/it-en/files/DAM/lamborghini/facelift_2019/homepage/families-gallery/2023/revuelto/revuelto_m.png"
-      />
-      <section class="section-revuelto">
-        <p>
-          El Lamborghini Revuelto es un automóvil deportivo de alto rendimiento
-          fabricado por la reconocida marca italiana Lamborghini. Es un modelo
-          emblemático que combina un diseño aerodinámico y agresivo con un
-          rendimiento excepcional.
-        </p>
-        <p>
-          El Revulto presenta líneas distintivas y una apariencia futurista que
-          evoca una sensación de velocidad y potencia. Su carrocería está
-          construida con materiales livianos y de alta resistencia, como fibra de
-          carbono, para maximizar la velocidad y la eficiencia.
-        </p>
-      </section>
-    </swiper-slide>
-
-    <swiper-slide>
-      <div>
-        <ion-icon class="icon-urus" name="car-sport"></ion-icon>
-        <h1 class="title-urus">Lamborghini Urus</h1>
-      </div>
-      <img src="assets/images/urus.jpeg" />
-      <section class="section-urus">
-
-        <p>
-          El Lamborghini Urus es un SUV de lujo fabricado por la prestigiosa marca
-          italiana Lamborghini. Lanzado en 2018, el Urus combina la elegancia y el
-          rendimiento deportivo característicos de Lamborghini con la practicidad
-          y versatilidad de un SUV.
-        </p>
-        <p>
-          El diseño del Lamborghini Urus es imponente y agresivo, con líneas
-          aerodinámicas y rasgos distintivos que reflejan su naturaleza deportiva.
-          La carrocería presenta un perfil musculoso y aerodinámico, con detalles
-          aerodinámicos integrados y una parrilla frontal de gran tamaño que le
-          otorgan una apariencia poderosa y dominante.
-        </p>
-      </section>
-    </swiper-slide>
-
-    <swiper-slide>
-      <div>
-        <ion-icon class="icon-urus-p" name="car-sport"></ion-icon>
-        <h1 class="title-urus-p">Lamborghini Urus</h1>
-      </div>
-      <img
-        src="https://www.lamborghini.com/sites/it-en/files/DAM/lamborghini/facelift_2019/model_gw/urus/2023/model_chooser/urus_performante_m.jpg"
-      />
-      <section class="section-urus-p">
-
-        <p>
-          El Lamborghini Urus es un SUV de lujo fabricado por la prestigiosa marca
-          italiana Lamborghini. Lanzado en 2018, el Urus combina la elegancia y el
-          rendimiento deportivo característicos de Lamborghini con la practicidad
-          y versatilidad de un SUV.
-        </p>
-        <p>
-          El diseño del Lamborghini Urus es imponente y agresivo, con líneas
-          aerodinámicas y rasgos distintivos que reflejan su naturaleza deportiva.
-          La carrocería presenta un perfil musculoso y aerodinámico, con detalles
-          aerodinámicos integrados y una parrilla frontal de gran tamaño que le
-          otorgan una apariencia poderosa y dominante.
-        </p>
-      </section>
-    </swiper-slide>
-
-    <swiper-slide>
-      <div>
-        <ion-icon class="icon-huracan" name="car-sport"></ion-icon>
-        <h1 class="title-huracan">Lamborghini huracan STERRATO</h1>
-      </div>
-      <img
-        src="https://www.lamborghini.com/sites/it-en/files/DAM/lamborghini/facelift_2019/homepage/model_choose/2023/huracan_sterrato_m.png"
-      />
-      <section class="section-huracan-sterrato">
-
-        <p>
-          El Lamborghini Huracán Sterrato es una versión especial del popular superdeportivo Huracán de Lamborghini. 
-          Presentado como un concepto en 2019, el Sterrato combina la potencia y el rendimiento del Huracán con la 
-          capacidad todoterreno para ofrecer una experiencia de conducción emocionante en diferentes terrenos.
-        </p>
-        <p>
-          El Huracán Sterrato se basa en el chasis del Huracán Evo, 
-          pero se ha modificado y elevado para mejorar su capacidad fuera de carretera. 
-          Cuenta con una mayor distancia al suelo, pasos de rueda ensanchados, protección adicional 
-          en la carrocería y neumáticos todo terreno más robustos.
-        </p>
-      </section>
-    </swiper-slide>
-
-    <swiper-slide>
-      <div>
-        <ion-icon class="icon-huracan-sto" name="car-sport"></ion-icon>
-        <h1 class="title-huracan-sto">Lamborghini huracan STO</h1>
-      </div>
-      <img
-        src="https://www.lamborghini.com/sites/it-en/files/DAM/lamborghini/facelift_2019/model_gw/huracan/2023/model_chooser/huracan_sto_m.jpg"
-      />
-      <section class="section-huracan-sto">
-
-        <p>
-          El Lamborghini Huracán STO (Super Trofeo Omologata) es un superdeportivo de alto rendimiento 
-          inspirado en los éxitos de Lamborghini en las carreras de GT3. Presentado en 2020, 
-          el Huracán STO ofrece una experiencia de conducción enfocada en la pista, combinando 
-          un diseño aerodinámico agresivo, un rendimiento excepcional y tecnología de vanguardia.
-        </p>
-        <p>
-          El diseño del Huracán STO está inspirado en los autos de carreras, 
-          con una aerodinámica optimizada para maximizar el rendimiento en pista. 
-          Cuenta con un alerón trasero ajustable y un difusor trasero impresionante 
-          para generar una carga aerodinámica significativa y mejorar la estabilidad 
-          a altas velocidades. También presenta un capó delantero y un parachoques 
-          delantero rediseñados para mejorar el flujo de aire y la refrigeración.
-        </p>
-      </section>
-    </swiper-slide>
+  <swiper-container>
+    Hola soy Farid
   </swiper-container>
 </ion-content>
