--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -3,6 +3,10 @@
 
 /** Ionic CSS Variables **/
 :root {
+  --favorite-color: green;
+  --color-huracan-str: rgb(74, 70, 26);
+  --color-urus-p: rgb(190, 176, 22);
+  --color-urus: rgb(14, 12, 11);
   /** primary **/
   --ion-color-primary: #3880ff;
   --ion-color-primary-rgb: 56, 128, 255;
