--- a/src/app/index/index.page.scss
+++ b/src/app/index/index.page.scss
@@ -10,6 +10,7 @@
   ion-content {
     --background: var(--ion-color-light);
     --color: #201a1a;
+    --ion-font-family: -apple-system, BlinkMacSystemFont, 'Helvetica Neue', 'Roboto', sans-serif;
 
   }
 
