--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,39 +1,69 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>login</ion-title>
+    <ion-title class="ion-text-center"><h1>MUSIC APP</h1></ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <form [formGroup]="loginForm">
-    <ion-item>
-      <ion-input
-        label="Email"
-        labelPlacement="floating"
-        placeholder="example@mail.com"
-        formControlName="email"
-      ></ion-input>
-    </ion-item>
+<ion-content class="ion-justify-content-center">
+  <ion-card class="ion-margin-horizontal" color="light">
+    <ion-card-content>
+      <h2 class="title">Sign up</h2>
+      <div class="icon-class-login">
+        <ion-icon name="aperture-outline"></ion-icon>
+      </div>
 
-    <div class="validtion-error">
-      <ng-container *ngFor="let validation of validation_messages.email">
-        <div
-          *ngIf="loginForm.get('email')?.hasError(validation.type) && 
-                loginForm.get('email')?.dirty"
-        >
-          {{validation.message}}
+      <form
+        [formGroup]="loginForm"
+        (ngSubmit)="loginUser(loginForm.value)"
+        class="ion-padding ion-margin"
+      >
+        <ion-item class="ion-margin-bottom ion-border">
+          <ion-input
+            label="Email"
+            labelPlacement="floating"
+            placeholder="example@mail.com"
+            formControlName="email"
+          ></ion-input>
+        </ion-item>
+
+        <div class="validation-error">
+          <ng-container *ngFor="let validation of validation_messages.email">
+            <h2
+              *ngIf="loginForm.get('email')?.hasError(validation.type) && 
+                    loginForm.get('email')?.dirty"
+            >
+                <ion-badge color="danger">{{validation.message}}</ion-badge>
+            </h2>
+          </ng-container>
         </div>
-      </ng-container>
-    </div>
+        <ion-item class="ion-margin-bottom ion-border">
+          <ion-input
+            type="password"
+            label="Password"
+            labelPlacement="floating"
+            placeholder="********"
+            formControlName="password"
+          ></ion-input>
+        </ion-item>
 
-    <ion-item>
-      <ion-input
-        type="password"
-        label="Password"
-        labelPlacement="floating"
-        placeholder="********"
-        formControlName="password"
-      ></ion-input>
-    </ion-item>
-  </form>
+        <div class="validation-error">
+          <ng-container *ngFor="let validation of validation_messages.password">
+            <h2
+              *ngIf="loginForm.get('password')?.hasError(validation.type) && 
+                    loginForm.get('password')?.dirty"
+            >
+              <ion-badge color="danger">{{validation.message}}</ion-badge>
+            </h2>
+          </ng-container>
+        </div>
+
+        <ion-button
+          class="ion-margin-bottom ion-border"
+          type="submit"
+          [disabled]="!loginForm.valid"
+          >Login</ion-button
+        >
+      </form>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
