--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,9 +1,69 @@
 <ion-header>
-
+  <ion-toolbar>
+    <ion-title class="ion-text-center"><h1>MUSIC APP</h1></ion-title>
+    <ion-buttons slot="end">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+  </ion-toolbar>
 </ion-header>
-
 <ion-content>
-  <swiper-container>
-    Hola soy Farid
+  
+  <h1>Artistas</h1>
+  <swiper-container 
+  [initialSlide]="0" 
+  [slidesPerView]="3" 
+  [speed]="400"
+  *ngIf="artists?.length > 0"
+  >
+    <swiper-slide *ngFor="let artist of artists">
+      <ion-avatar (click)="showSongs(artist)">
+        <img
+          src="{{artist.image}}"
+        />
+        <span>{{artist.name}}</span>
+      </ion-avatar>
+    </swiper-slide>
+  </swiper-container>
+
+  <h1>Artistas</h1>
+  <swiper-container 
+  [initialSlide]="0" 
+  [slidesPerView]="3" 
+  [speed]="400"
+  *ngIf="artists?.length > 0"
+  >
+    <swiper-slide *ngFor="let artist of localartists.artists">
+      <ion-avatar>
+        <img
+          src="{{artist.image}}"
+        />
+        <span>{{artist.name}}</span>
+      </ion-avatar>
+    </swiper-slide>
   </swiper-container>
 </ion-content>
+
+<ion-footer>
+  <ion-grid>
+    <ion-row>
+      <ion-col class="ion-text-start">0:00</ion-col>
+      <ion-col class="ion-text-end">0:00</ion-col>
+    </ion-row>
+  </ion-grid>
+  <ion-progress-bar [value]="0.5"></ion-progress-bar>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="1">
+      <ion-icon name="heart"></ion-icon>
+    </ion-col>
+    <ion-col size="10" class="ion-text-center">
+      <ion-text>{{
+        song.name || "Sin cancion seleccionada"
+      }}</ion-text>
+    </ion-col>
+    <ion-col size="1">
+      <ion-icon name="play"></ion-icon>
+    </ion-col>
+    </ion-row>
+  </ion-grid>
+</ion-footer>
