--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -13,4 +13,8 @@ swiper-slide {
 
 h1 {
     margin: 20px;
+    color: var(--ion-color-tertiary-shade);
+    text-anchor: start;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
 }
