--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -2,7 +2,11 @@
   <ion-menu contentId="content" side="end">
     <ion-header>
       <ion-toolbar>
-        <ion-title>Menu</ion-title>
+        <ion-title>
+          <h1>
+            Menu
+          </h1>
+        </ion-title>
         <ion-buttons slot="start">
           <ion-button icon-only (click)="closeMenu()">
             <ion-icon name="arrow-forward-outline"></ion-icon>
@@ -10,6 +14,10 @@
         </ion-buttons>
       </ion-toolbar>
     </ion-header>
+
+    <ion-item (click)="index()">
+        <h2>Intro</h2>
+    </ion-item>
     <ion-content>
       
     </ion-content>
