--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -18,3 +18,7 @@ h1 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
 }
+
+.album-style {
+    --border-radius: 4px;
+}
