--- a/src/app/songs-modal/songs-modal.page.html
+++ b/src/app/songs-modal/songs-modal.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>{{artist_name}}</ion-title>
+    <ion-title>{{data_name}}</ion-title>
     <ion-buttons>
       <ion-button (click)="finish()">
         <ion-icon name="close" class="close-icon" ></ion-icon>
