--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -18,6 +18,15 @@
     <ion-item (click)="index()">
         <h2>Intro</h2>
     </ion-item>
+    <ion-item (click)="goToHome()">
+      <ion-icon name="home"></ion-icon>
+      <h2>Incio</h2>
+    </ion-item>
+
+    <ion-item (click)="goToSettings()">
+      <ion-icon name="settings"></ion-icon>
+      <h2>Configuracion</h2>
+    </ion-item>
     <ion-content>
       
     </ion-content>
